src/app/components/contacts/contacts.scss
@use '../../../styles/variables' as *;

button{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 352px;
    height: 56px;
    border-radius: 8px;
    gap: 16px;
    margin: 32px 0;
    background-color: $main_header;
    border: none;
    >p{
        font-weight: bold;
        color: $main_white;
    }
    &:hover{
        background-color: $main_blue;
        box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2);
    }
}

.main-container{
    display: flex;
    flex-direction: column;
    justify-self: start;
    align-items: center;
    width: 424px;
    height: calc(100vh - 80px);
    overflow: scroll;
    overflow-x: hidden;
    box-shadow: 8px 0 5px rgba(0, 0, 0, 0.177);
    background-color: white;
    >p{
        padding-left: 36px;
    }
    >div{
        padding-left: 16px;
    }
}
.separator{
    max-width: 352px;
    height: 2px;
    margin-bottom: 32px;
    background-color: #2a36471e;
}

.contact-details-mobile{
    height: 100vh;
    width: 100%;
    
    display: none;
    flex-direction: column;
    justify-content: start;
    align-items: start;

    padding-left: 32px;

    background-color: $main_white;
}

.return_button{
    width: 100%;
    display: flex;
    justify-content: end;
    &_icon{
        cursor: pointer;
        height: 50px;
        padding-top: 8px;
        padding-right: 32px;
    }
}
.contact{
    cursor: pointer;
    width: 100%;
    max-width: 352px;
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 8px;
    margin-bottom: 32px;
    border-radius: 8px;
    >h1{
      margin: 0;  
      margin-top: 16px;
    }
    >p{
        margin: 0;  
        margin-top: 8px;
        font-size: 2.0rem;
    }
    &_second{
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-self: start;
        align-items: start;
    }
    &_line{
        width: 59px;
        height: 4px;
        background-color: $main_blue;
    }
    &_icon{
        display: flex;
        justify-content: center;
        align-items: center;
        width: 52px;
        height: 52px;
        border-radius: 100px;
        outline: white solid 4px;
        background-color: $user_purple;
        >p{
            color: $main_white;
        }
        &:active{
            border-width: 2px;
            border-color: $main_white;
        }
    }
    &_email{
        color: $main_blue;
    }
    &:hover{
        background-color: $main_white;
    }
    &:active{
        background-color: $main_header;
    }
    div{
        margin-left: 24px;
    }
}
.clicked{
    background-color: $main_header;
    .contact-full-name{
        color: $main_white;
    }
    &:hover{
        background-color: $main_header;
    }
}
.user{
    width: 100%;
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 16px;

    &_icon{
        width: 100px;
        height: 100px;
        display: flex;
        justify-content: center;
        align-items: center;
        background-color: $user_purple;
        border-radius: 100px;
        margin-right: 16px;
        font-size: 4.7rem;
        color: $main_white;
        margin: 16px 0;
        gap: 16px;
    }
    &_name{
        font-size: 3.2rem;
        color: $main_header; 
    }
    &_email{
        color: $main_blue;
    }
}


.bg-color_ffa35e{
    background-color: $user_orange;
}
.bg-color_ff5eb3{
    background-color: $user_pink;
}
.bg-color_6e52ff{
    background-color: $user_blue;
}
.bg-color_9327ff{
    background-color: $user_orange;
}
.bg-color_00bee8{
    background-color: $user_lightblue;
}
.bg-color_ff745e{
    background-color: $user_red;
}


@media(max-width:1024px){
    .contact_email{
        font-size: 1.4rem;
    }
    .contact-button{
        display: none;
    }
}
@media(max-width:1190px){
    .main-container{
        height: 100%;
        width: 100%;
    }
}

